--- a/src/pages/articles.html
+++ b/src/pages/articles.html
@@ -6,7 +6,7 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 
-<body class="body">
+<body class="body" data-body>
 <%= htmlWebpackPlugin.options.sectionHeader %>
 <main class="main decor-news">
     <section class="section pt-100 ptm-80 mb-150 mbm-130">
