--- a/src/pages/handbook.html
+++ b/src/pages/handbook.html
@@ -6,13 +6,13 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 
-<body class="body">
+<body class="body" data-body>
 <%= htmlWebpackPlugin.options.sectionHeader %>
 <main class="main decor-news">
     <div class="container">
         <div class="layout pt-100 ptm-80">
             <div class="layout__aside mbt-40 mbm-25">
-                <div class="dropdown" data-dropdown>
+                <div class="dropdown dropdown--sidebar" data-dropdown data-aside="sticky">
                     <div class="dropdown__header">
                         <button class="button-dropdown" data-dropdown-button>
                             <span class="button-dropdown__title">
@@ -651,27 +651,27 @@
                         <div class="swiper-container slider__container slider__container--overflow">
                             <div class="swiper-wrapper slider__wrapper">
                                 <div class="swiper-slide slider__slide slider__slide--gallery">
-                                    <a href="./assets/content/placeholder.svg" class="article-gallery" data-fancybox="gallery">
+                                    <a href="./assets/content/placeholder.svg" class="article-gallery" data-fancybox="photo">
                                         <img src="./assets/content/placeholder.svg" alt="Заголовок">
                                     </a>
                                 </div>
                                 <div class="swiper-slide slider__slide slider__slide--gallery">
-                                    <a href="./assets/content/placeholder.svg" class="article-gallery" data-fancybox="gallery">
+                                    <a href="./assets/content/placeholder.svg" class="article-gallery" data-fancybox="photo">
                                         <img src="./assets/content/placeholder.svg" alt="Заголовок">
                                     </a>
                                 </div>
                                 <div class="swiper-slide slider__slide slider__slide--gallery">
-                                    <a href="./assets/content/placeholder.svg" class="article-gallery" data-fancybox="gallery">
+                                    <a href="./assets/content/placeholder.svg" class="article-gallery" data-fancybox="photo">
                                         <img src="./assets/content/placeholder.svg" alt="Заголовок">
                                     </a>
                                 </div>
                                 <div class="swiper-slide slider__slide slider__slide--gallery">
-                                    <a href="./assets/content/placeholder.svg" class="article-gallery" data-fancybox="gallery">
+                                    <a href="./assets/content/placeholder.svg" class="article-gallery" data-fancybox="photo">
                                         <img src="./assets/content/placeholder.svg" alt="Заголовок">
                                     </a>
                                 </div>
                                 <div class="swiper-slide slider__slide slider__slide--gallery">
-                                    <a href="./assets/content/placeholder.svg" class="article-gallery" data-fancybox="gallery">
+                                    <a href="./assets/content/placeholder.svg" class="article-gallery" data-fancybox="photo">
                                         <img src="./assets/content/placeholder.svg" alt="Заголовок">
                                     </a>
                                 </div>
