--- a/src/pages/privacy.html
+++ b/src/pages/privacy.html
@@ -6,7 +6,7 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 
-<body class="body">
+<body class="body" data-body>
 <%= htmlWebpackPlugin.options.sectionHeader %>
 <main class="main">
     <section class="section pt-20 pb-15 ptt-30 ptm-15 pbt-25 pbm-0">
