--- a/src/pages/single-article.html
+++ b/src/pages/single-article.html
@@ -6,7 +6,7 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 
-<body class="body">
+<body class="body" data-body>
 <%= htmlWebpackPlugin.options.sectionHeader %>
 <main class="main decor-info">
     <section class="section mb-80 pt-100 ptm-80">
@@ -51,27 +51,27 @@
                         <div class="swiper-container slider__container" data-nav>
                             <div class="swiper-wrapper slider__wrapper">
                                 <div class="swiper-slide slider__slide slider__slide--gallery">
-                                    <a href="./assets/content/placeholder.svg" class="article-gallery" data-fancybox="gallery">
+                                    <a href="./assets/content/placeholder.svg" class="article-gallery" data-fancybox="photo">
                                         <img src="./assets/content/placeholder.svg" alt="Заголовок">
                                     </a>
                                 </div>
                                 <div class="swiper-slide slider__slide slider__slide--news">
-                                    <a href="./assets/content/placeholder.svg" class="article-gallery" data-fancybox="gallery">
+                                    <a href="./assets/content/placeholder.svg" class="article-gallery" data-fancybox="photo">
                                         <img src="./assets/content/placeholder.svg" alt="Заголовок">
                                     </a>
                                 </div>
                                 <div class="swiper-slide slider__slide slider__slide--news">
-                                    <a href="./assets/content/placeholder.svg" class="article-gallery" data-fancybox="gallery">
+                                    <a href="./assets/content/placeholder.svg" class="article-gallery" data-fancybox="photo">
                                         <img src="./assets/content/placeholder.svg" alt="Заголовок">
                                     </a>
                                 </div>
                                 <div class="swiper-slide slider__slide slider__slide--news">
-                                    <a href="./assets/content/placeholder.svg" class="article-gallery" data-fancybox="gallery">
+                                    <a href="./assets/content/placeholder.svg" class="article-gallery" data-fancybox="photo">
                                         <img src="./assets/content/placeholder.svg" alt="Заголовок">
                                     </a>
                                 </div>
                                 <div class="swiper-slide slider__slide slider__slide--news">
-                                    <a href="./assets/content/placeholder.svg" class="article-gallery" data-fancybox="gallery">
+                                    <a href="./assets/content/placeholder.svg" class="article-gallery" data-fancybox="photo">
                                         <img src="./assets/content/placeholder.svg" alt="Заголовок">
                                     </a>
                                 </div>
